@@ -87,6 +87,7 @@ public:
     void loadFiles();
     void setActivationWindow(QWidget *) { }
     void setupIconTheme();
+    void connectPowerSignal();
 };
 #endif
 
